--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Hello World! I’m Mark Feldman. This is my new website!</p>
+  <p>Second Paragraph Added</p>
 
 </body>
 </html>
